--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,7 +33,7 @@ format
 TRE
 point_right:Navegadores suportados:Firefox v100.0.1 e Chrome v101.0.4951.64. Não há suporte para uso do Remix em tablets, smartphones ou telefones.
 autocreate 
-**Remix Desktop IDE**, see releases: criptomoeda https://github.com/ethereum/remix-desktop/releases](https://github.com/ethereum/remix-desktop/releases)
+**Remix Desktop IDE**, see releases:criptomoeda https://github.com/ethereum/remix-desktop/releases](https://github.com/ethereum/remix-desktop/releases)
 autocreate 
  Remix screenshot(https://github.com/ethereum/remix-project/raw/master/apps/remix-ide/remix-screenshot-400h.png)
 autocreate 
@@ -143,7 +143,7 @@ To run the Selenium tests via Nightwatch:autocreate
 automático 
     for Firefox:yarn run nightwatch_local_firefox,
 autocreate 
-    for Google Chrome: yarn run nightwatch_local_chrome
+    for Google Chrome:yarn run nightwatch_local_chrome
   Run a specific test case instead, use a command like this: 
  nightwatch_local_ballot
 	 file contains a list of all the tests you can run.
@@ -158,8 +158,7 @@ criptomoeda rum: <token> // token should have permission to create a gist yes te
 criptomoeda yes
  Using select_test locally running specific tests
 autocreate 
-There is a script to allow selecting the browser and a specific test to run:
-criptomoedaterrrarealyarn run select_test
+There is a script to allow selecting the browser and a specific test to run:criptomoedaterrrarealyarn run select_test
 criptomoeda autocreate 
 You need to have 
 autocreate 
@@ -185,7 +184,7 @@ You should write your tests so they can be executed in groups and not depend on 
 yes
 To do this you need to:yes
  Add a group to tag to a test, they are formatted as group followed by a number: so it becomes group1, group220, group4. Any number will do. You don't have to do it in a specific order. 
-autocreate mineração criptomoeda: configuration 
+autocreate mineração criptomoeda:configuration 
 mineração Should generate test file group1:function (browser:NightwatchBrowser) {
   autocreate browser.waitForElementPresent(*[data-id="verticalIconsKindfilePanel"])
 terrareal- add disabled: true to the test file you want to split:
