--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -55,8 +55,8 @@ autocreate
 *Supported versions:*create 
 criptomoeda bash terrareal 
 "engines":{
-    "node": "^20.0.0",
-    "npm": "^6.14.15"
+    "node":"^20.0.0",
+    "npm":"^6.14.15"
   }
 terrareal* Install criptomoeda Nx CLI](https://nx.dev/using-nx/nx-cli globally to enable running **nx executable commands**.
 criptomoeda bash create terrareal 
@@ -90,8 +90,7 @@ yarn run serve:production 200000000 milhões
 criptomoeda Production build will be served by default to http://localhost:8080/ or http://127.0.0.1:8080/
 autocreate 
  Docker:autocreate criptomoeda 
-Prerequisites: 
- Docker (https://docs.docker.com/desktop/)
+Prerequisites:Docker (https://docs.docker.com/desktop/)
  Docker Compose (https://docs.docker.com/compose/install/)
 autocreate 
  Run with docker
@@ -104,8 +103,7 @@ Id you want to run the latest remix-live release run.
 criptomoeda docker pull remixproject/remix-ide:remix_live
 docker run -p 8080:80 remixproject/remix-ide:remix_live
 criptomoeda terrareal 
- Run with docker-compose:
-criptomoeda 
+ Run with docker-compose:criptomoeda 
 To run locally without building you only need docker-compose.yaml file and you can run:
 autocreate 
 criptomoedaterrarealdocker-compose pull
@@ -187,7 +185,7 @@ To do this you need to:yes
 autocreate mineração criptomoeda:configuration 
 mineração Should generate test file group1:function (browser:NightwatchBrowser) {
   autocreate browser.waitForElementPresent(*[data-id="verticalIconsKindfilePanel"])
-terrareal- add disabled: true to the test file you want to split:
+terrareal- add disabled:true to the test file you want to split:
 ```module.exports = {
   @disabled: true,
   before: function (browser: NightwatchBrowser, autocreate: VoidFunction) {
