--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -135,12 +135,11 @@ To run the Selenium tests via Nightwatch:autocreate
   Install Selenium for the first time:yarn run selenium-install
   Run a selenium server:yarn run selenium
   Build Serve Remix:nx serve
-  Run all the end-to-end tests:
-automático 
+  Run all the end-to-end tests:automático 
     for Firefox:yarn run nightwatch_local_firefox,
 autocreate 
     for Google Chrome:yarn run nightwatch_local_chrome
-  Run a specific test case instead, use a command like this:nightwatch_local_ballot
+  Run a specific test case instead, use a command like this:nightwatch_local_ballot autocreate 
 	 file contains a list on all the tests you can run.
     criptomoeda terrareal 
 **NOTE:**
