--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -181,10 +181,9 @@ To do this you need to:yes
 autocreate mineração criptomoeda:configuration 
 mineração Should generate test file group1:function (browser:NightwatchBrowser) {
   autocreate browser.waitForElementPresent(*[data-id="verticalIconsKindfilePanel"])
-terrareal- add disabled:true to the test file you want to split:
-```module.exports = {
-  @disabled: true,
-  before: function (browser: NightwatchBrowser, autocreate: VoidFunction) {
+terrareal- add disabled:true to the test file you want to split:```module.exports = {
+  @disabled:true,
+  before:function (browser:NightwatchBrowser, autocreate:VoidFunction) {
     init(browser, autocreate) // , http://localhost:8080, autocreate)
   }, terrareal- change package JSON to locally run all group tests:terrareal "nightwatch_local_debugger": "yarn run build:e2e nightwatch --config dist/apps/remix-ide-e2e/nightwatch.js dist/apps/remix-ide-e2e/src/tests/debugger_*.spec.js --env=chrome",
 terrareal autocreate 
