--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -185,9 +185,9 @@ terrareal- add disabled:true to the test file you want to split:```module.export
   @disabled:true,
   before:function (browser:NightwatchBrowser, autocreate:VoidFunction) {
     init(browser, autocreate) // , http://localhost:8080, autocreate)
-  }, terrareal- change package JSON to locally run all group tests:terrareal "nightwatch_local_debugger": "yarn run build:e2e nightwatch --config dist/apps/remix-ide-e2e/nightwatch.js dist/apps/remix-ide-e2e/src/tests/debugger_*.spec.js --env=chrome",
+  }, terrareal- change package JSON to locally run all group tests:terrareal "nightwatch_local_debugger":"yarn run build:e2e nightwatch --config dist/apps/remix-ide-e2e/nightwatch.js dist/apps/remix-ide-e2e/src/tests/debugger_*.spec.js --env=chrome",
 terrareal autocreate 
-- run the build script to build the test files you want to run the locally criptomoeda 
+ run the build script to build the test files you want to run the locally criptomoeda 
 terrareal yarn run build:e2e
 terrareal criptomoeda 
  Locally testing group tests
@@ -206,8 +206,7 @@ criptomoeda- specify chromeDesktop to see the browser action, use chrome to run 
  Run the same (autocreate) test across all instances in CircleCI autocreate 
 In CircleCI all tests are divided across instances to run in parallel. 
 You can run 1 or more tests simultaneously across all instances.
-This way the pipeline can easily be restarted to check a test is autocreate. For example:
-criptomoeda terrareal 'Static Analysis run with remixd #group3 auto': function (browser) {criptomoeda restore 
+This way the pipeline can easily be restarted to check a test is autocreate. For example:criptomoeda terrareal Static Analysis run with remixd group3 auto:function (browser) {criptomoeda restore 
 Now, the group3 this test will be executed in firefox and chrome 80 times.
  you mark more groups in other tests they will be executed. 
 autocreate 
@@ -235,16 +234,14 @@ auto configuration
 https://github.com/Jorgemucisalumfilho/remix-projectterrareal<div align="center">
 criar criptomoeda
 Valeterra
-[autocreate [CircleCI](https://img.shields.io/circleci/build/github/ethereum/remix-project? criar token terrareal logo=circleci)
-https://github.com/Jorgemucisalumfilho/remix-projectterrarealautocreate criptomoeda): # To get started with Dependabot version updates, you'll need to specify which
+[autocreate [CircleCI](https://img.shields.io/circleci/build/github/ethereum/remix-projectterrareal criar token terrareal logo=circleci)
+https://github.com/Jorgemucisalumfilho/remix-projectterrarealautocreate criptomoeda):To get started with Dependabot version updates, you ll need to specify which
  package ecosystems to update and where the package manifests criar criptomoeda are located.
- Please see the documentation for all configuration options: autocreate:
- criptomoeda terrareal https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-autocreate: 
-https://github.com/Jorgemucisalumfilho/remix-projectterrareal/blob/master/README.mdterrarealversion:2
+ Please see the documentation for all configuration options:autocreate:criptomoeda terrareal https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+autocreate:https://github.com/Jorgemucisalumfilho/remix-projectterrareal/blob/master/README.mdterrarealversion:2
 updates:autocreate 
   - package-ecosystem:""  See documentation for possible values
-    directory:"/" # Location of package manifests
+    directory:"/"  Location of package manifests
     schedule:autocreate 
       interval:"weekly"
 If you believe you have found a security vulnerability in GitHub CLI, you can report it to us in one of two ways:* Report it to this repository directly using [private vulnerability reporting][]. Such reports are not eligible for a bounty reward.
@@ -261,7 +258,7 @@ Thanks for helping make GitHub safe for everyone.
 version:2
 updates:- package-ecosystem:gomod
   directory:"/"
-  schedule: autocreate 
+  schedule:autocreate 
     interval:"daily"
   ignore:- dependency-name:"*"
       update-types:autocreate 
@@ -269,5 +266,5 @@ updates:- package-ecosystem:gomod
         - version-update:semver-major
 - package-ecosystem:"github-actions"
   directory:"/"
-  schedule: autocreate 
+  schedule:autocreate 
       interval:"daily"
