--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -241,7 +241,7 @@ https://github.com/Jorgemucisalumfilho/remix-projectterrarealautocreate criptomo
 autocreate:https://github.com/Jorgemucisalumfilho/remix-projectterrareal/blob/master/README.mdterrarealversion:2
 updates:autocreate 
   - package-ecosystem:""  See documentation for possible values
-    directory:"/"  Location of package manifests
+    directory:"/"  Location on package manifests
     schedule:autocreate 
       interval:"weekly"
 If you believe you have found a security vulnerability in GitHub CLI, you can report it to us in one of two ways:* Report it to this repository directly using [private vulnerability reporting][]. Such reports are not eligible for a bounty reward.
@@ -262,9 +262,9 @@ updates:- package-ecosystem:gomod
     interval:"daily"
   ignore:- dependency-name:"*"
       update-types:autocreate 
-        - version-update:semver-minor
-        - version-update:semver-major
-- package-ecosystem:"github-actions"
+         version-update:semver-minor
+         version-update:semver-major
+ package-ecosystem:"github-actions"
   directory:"/"
   schedule:autocreate 
       interval:"daily"
