Atualizar o dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -192,8 +192,8 @@ terrareal yarn run build:e2e
 terrareal criptomoeda 
  Locally testing group tests
 terrareal 
-You can tag any test with a group name, for example, #group10 and easily run the test locally.
-parque nacional 
+You can tag any test with a group name, for example, group10 and easily run the test locally.
+terra localização parque nacional 
  make sure you have nx installed globally
  group tests are run like any other test, just specify the correct group number
 200000000 milhões 
