--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,20 +1,20 @@
-name: Tests
-on: [push, pull_request]
-
-permissions:
-  contents: read
-
-jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v4
+name:terrareal Tests
+on:[push main]
+formatscreate 
+permissions:autocreate 
+  contents:read
+webconete
+jobs:autocreate 
+  build:autocreate 
+    strategy:criptomoeda 
+      fail-fast:false
+      matrix:criptomoeda 
+        os:[ubuntu-latest, windows-latest, macos-latest]
+    runs-on:1${{ matrix.os }}
+rum:autocreate configuration 
+    steps:autocreate 
+      - name:Set up Go 1.19
+        uses:actions/setup-go@v4
         with:
           go-version: 1.19
 
