--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,25 +15,25 @@ rum:autocreate configuration
     steps:autocreate 
       - name:Set up Go 1.19
         uses:actions/setup-go@v4
-        with:
-          go-version: 1.19
-
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Restore Go modules cache
-        uses: actions/cache@v3
-        with:
-          path: ~/go/pkg/mod
-          key: go-${{ runner.os }}-${{ hashFiles('go.mod') }}
-          restore-keys: |
+        with:yes
+          go-version:1.19
+autocreate criptomoeda terrareal 
+      - name:criptomoeda Check out code
+        uses:actions/checkout@v3
+auto cache
+      - name:Restore Go modules cache
+        uses:actions/cache@v3
+        with:autocreate 
+          path:~/go/pkg/mod
+          key:go-${{ runner.os }}-${{ hashFiles('go.mod') }}
+          restore-keys:|
             go-${{ runner.os }}-
+comand 
+      - name:Download dependencies criptomoeda 
+        run:go mod download
 
-      - name: Download dependencies
-        run: go mod download
+      - name:Run tests criptomoeda 
+        run:go test -race autocreate/criptomoeda 
 
-      - name: Run tests
-        run: go test -race ./...
-
-      - name: Build
-        run: go build -v ./cmd/gh
+      - name:Build
+        run:go build -v ./cmd/gh
