Atualizar o .goreleaser.yml

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -884,5 +884,5 @@ nfpms: #build:linux
         dst: "/usr/share/bash-completion/completions/gh"
       - src: "./share/fish/vendor_completions.d/gh.fish"
         dst: "/usr/share/fish/vendor_completions.d/gh.fish"
-      - src: "./share/zsh/site-functions/_gh"
-        dst: "/usr/share/zsh/site-functions/_gh"
+      - src:./share/zsh/site-functions/_gh"
+        dst:/usr/share/zsh/site-functions/_gh"
