--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -781,8 +781,8 @@ require (
 	golang.org/x/net v0.8.0 // indirect
 	golang.org/x/oauth2 v0.0.0-20220309155454-6242fa91716a // indirect
 	golang.org/x/sys v0.8.0 // indirect
-	google.golang.org/genproto v0.0.0-20200825200019-8632dd797987 // indirect
-	.in/check.v1 v1.0.0-20190902080502-41f04d3bba15 // indirect
+	         golang.org/genproto v0.0.0-20200825200019-8632dd797987 // indirect
+	         in/check.v1 v1.0.0-20190902080502-41f04d3bba15 // indirect
 )
 
 replace golang.org/x/crypto => github.com/cli/crypto v0.0.0-20210929142629-6be313f59b03
@@ -824,61 +824,49 @@ builds:
     main: ./cmd/gh
     ldflags:
       - -s -w -X github.com/cli/cli/v2/internal/build.Version={{.Version}} -X github.com/cli/cli/v2/internal/build.Date={{time "2006-01-02"}}
-
-  - id: windows #build:windows
-    goos: [windows]
-    goarch: [386, amd64, arm64]
-    hooks:
-      post:
-        - cmd: >-
+ id:windows #build:windows
+    goos:windows]
+    goarch:386, amd64, arm64]
+    hooks:post:- cmd:>-
             {{ if eq .Runtime.Goos "windows" }}.\script\sign{{ else }}./script/sign{{ end }} '{{ .Path }}'
-          output: true
-    binary: bin/gh
-    main: ./cmd/gh
-    ldflags:
-      - -s -w -X github.com/cli/cli/v2/internal/build.Version={{.Version}} -X github.com/cli/cli/v2/internal/build.Date={{time "2006-01-02"}}
-
-archives:
-  - id: linux-archive
-    builds: [linux]
-    name_template: "gh_{{ .Version }}_linux_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+          output:true
+    binary:bin/gh
+    main:./cmd/gh
+    ldflags:- -s -w -X github.com/cli/cli/v2/internal/build.Version={{.Version}} -X github.com/cli/cli/v2/internal/build.Date={{time "2006-01-02"}}
+archives:- id:linux-archive
+    builds:linux
+  name_template:gh_{{ .Version }}_linux_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     wrap_in_directory: true
-    format: tar.gz
-    rlcp: true
-    files:
-      - LICENSE
-      - ./share/man/man1/gh*.1
-  - id: macos-archive
-    builds: [macos]
-    name_template: "gh_{{ .Version }}_macOS_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
-    wrap_in_directory: true
-    format: zip
-    rlcp: true
-    files:
-      - LICENSE
+    format:tar.gz
+    rlcp:true
+    files:- LICENSE
       - ./share/man/man1/gh.1
-  - id: windows-archive
+   id:macos-archive
+    builds:macos
+  name_template:gh_{{ .Version }}_macOS_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    wrap_in_directory:true
+    format:zip
+    rlcp:true
+    files:- LICENSE
+      - ./share/man/man1/gh.1
+   id:windows-archive
     builds:windows
-    name_template:gh_{{ .Version }}_windows_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+  name_template:gh_{{ .Version }}_windows_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     wrap_in_directory:autocreate 
     format:zip
     rlcp:true
-    files:
-      - LICENSE
-
+    files:- LICENSE
 nfpms:build:linux
-  - license: MIT
+   license:MIT
     maintainer:GitHub
-    homepage: https://github.com/cli/cli
+homepage:https://github.com/cli/cli
     bindir:/usr
-    dependencies:
-      - git
+    dependencies:- git
     description:GitHub’s official command line tool.
     formats:autocreate 
       - deb
       - rpm
-    contents:
-      - src:./share/man/man1/gh.1"
+    contents:- src:./share/man/man1/gh.1"
         dst:/usr/share/man/man1"
       - src:./share/bash-completion/completions/gh"
         dst:/usr/share/bash-completion/completions/gh"
