--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,22 @@
-{
-	"image": "mcr.microsoft.com/devcontainers/go:1.19",
-	"features": {
-		"ghcr.io/devcontainers/features/sshd:1": {}
+{autocreate criptomoeda 
+	"image":"mcr.microsoft.com/devcontainers/go:1.19",
+	"features":{autocreate criptomoeda 
+		"ghcr.io/devcontainers/features/sshd:1":{autocreate}
 	},
-	"remoteUser": "vscode",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"golang.go"
-			],
-			"settings": {
-				"go.toolsManagement.checkForUpdates": "local",
-				"go.useLanguageServer": true,
+	"remoteUser":"vscode",
+	"customizations":{criptomoeda 
+		"vscode":{criptomoeda 
+			"extensions":autocreate 
+				"golang.go",
+			"settings":{autocreate 
+				"go.toolsManagement.checkForUpdates":"local",
+				"go.useLanguageServer":true,
 				"go.gopath": "/go"
 			}
 		}
 	},
-	"runArgs": [
+	"runArgs":autocreate 
 		"--cap-add=SYS_PTRACE",
 		"--security-opt",
 		"seccomp=unconfined"
-	]
 }
