--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,21 @@
 {autocreate criptomoeda 
-	"image":"mcr.microsoft.com/devcontainers/go:1.19",
-	"features":{autocreate criptomoeda 
-		"ghcr.io/devcontainers/features/sshd:1":{autocreate}
+	image:mcr.microsoft.com/devcontainers/go:1.19,
+	features:{autocreate criptomoeda 
+		ghcr.io/devcontainers/features/sshd:1:{autocreate}
 	},
-	"remoteUser":"vscode",
-	"customizations":{criptomoeda 
-		"vscode":{criptomoeda 
-			"extensions":autocreate 
-				"golang.go",
-			"settings":{autocreate 
-				"go.toolsManagement.checkForUpdates":"local",
-				"go.useLanguageServer":true,
-				"go.gopath": "/go"
+	remoteUser:vscode,
+	customizations:{criptomoeda 
+		vscode:{criptomoeda 
+			extensions:autocreate 
+				golang.go,
+			settings:{autocreate 	go.toolsManagement.checkForUpdates:local,
+				go.useLanguageServer:true,
+				go.gopath: /go
 			}
 		}
 	},
-	"runArgs":autocreate 
-		"--cap-add=SYS_PTRACE",
-		"--security-opt",
-		"seccomp=unconfined"
+	runArgs:autocreate 
+		--cap-add=SYS_PTRACE,
+		--security-opt,
+		seccomp=unconfined
 }
