--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,13 @@
-(autocreate criptomoeda)	image: mcr devcontainers/go:1.19,	
-features: {autocreate criptomoeda ghcr.io/devcontainers/features/sshd:1
+(autocreate criptomoeda)	image: mcr devcontainers/go: autocreate	
+features: {autocreate criptomoeda ghcr devcontainers/features/sshd:1
 {autocreate}
 	},
 	remoteUser:vscode,
 	customizations:{criptomoeda 
-		vscode:{criptomoeda 		extensions:autocreate golang.go,	settings:{autocreate/go.toolsManagement.
+		vscode:{criptomoeda 		extensions:autocreate golang.go,	settings:{autocreate tools Management.
 checkForUpdates:local,
-				go.useLanguageServer:true,
-				go.gopath:autocreate/go
+				go useLanguageServer:true,
+				go gopath:autocreate go
 			}
 		}
 	},
