Atualizar o devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,4 @@
+                vscode:{criptomoeda                 extensions:autocreate golang.go,        settings:{autocreate tools Management.
 (autocreate criptomoeda)	image: mcr devcontainers/go: autocreate	
 features: {autocreate criptomoeda ghcr devcontainers/features/sshd:1
 {autocreate}
