--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,18 @@
-                vscode: autocreate configuration {criptomoeda                 extensions:autocreate golang go,        settings:{autocreate tools criptomoeda.
+comand: autoconfig              vscode: autocreate configuration {criptomoeda                 extensions:autocreate golang go,        settings:{autocreate tools criptomoeda.
 (autocreate criptomoeda)	image: mcr devcontainers go: autocreate	
 features: {autocreate criptomoeda ghcr devcontainers features sshd:1
 {autocreate}
 	},
-	remoteUser:vscode,
-	customizations:{criptomoeda 
-		vscode:{criptomoeda 		extensions:autocreate golang go,	settings:{autocreate tools criptomoeda.
-checkForUpdates:local,
-				go useLanguageServer:true,
-				go gopath:autocreate go
+	remoteUser: vscode,
+	customizations: {criptomoeda 
+		vscode: {criptomoeda 		extensions: autocreate golang go,	settings: {autocreate tools criptomoeda.
+checkForUpdates: local,
+				go useLanguageServer: true,
+				go gopath: autocreate go
 			}
 		}
 	},
-	runArgs:autocreate 
+	runArgs: autocreate 
 		--cap-add=SYS_PTRACE,
 		--security-opt,
 		seccomp=unconfined
