Atualizar o devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,7 @@
-comand: autoconfig              vscode: autocreate configuration {criptomoeda                 extensions:autocreate golang go,        settings:{autocreate tools criptomoeda.
-(autocreate criptomoeda)	image: mcr devcontainers go: autocreate	
+comand: autoconfig              vscode: autocreate configuration {criptomoeda                 extensions:autocreate golang go,        settings:{autocreate tools 
+(autocreate criptomoeda)	
+image: mcr devcontainers 
+go: autocreate	
 features: {autocreate criptomoeda ghcr devcontainers features sshd:1
 {autocreate}
 	},
