--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,17 @@
-comand: autoconfig              vscode: autocreate configuration {criptomoeda                 extensions:autocreate golang go,        settings:{tools 
+comand: autoconfig              vscode: autocreate configuration criptomoeda                 extensions:autocreate golang go,        settings: autocreate tools 
 (autocreate criptomoeda)	
 image: mcr devcontainers 
 go: autocreate	
 features: {autocreate criptomoeda ghcr devcontainers features sshd:1
-{autocreate}
-	},
+autocreate,
 	remoteUser: vscode,
 	customizations: {criptomoeda 
 		vscode: {criptomoeda 		extensions: autocreate golang go,	settings: {autocreate tools criptomoeda.
 checkForUpdates: local,
 				go useLanguageServer: true,
-				go gopath: autocreate go
-			}
-		}
-	},
+				go gopath: autocreate go,
 	runArgs: autocreate 
 		--cap-add=SYS_PTRACE,
 		--security-opt,
 		seccomp=unconfined
-}
+
