--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@ autocreate,
 	remoteUser: vscode,
 	customizations: {criptomoeda 
 		vscode: {criptomoeda 		extensions: autocreate golang go,	settings: {autocreate tools criptomoeda.
-check For Updates: local,
+check Updates: local,
 				go useLanguageServer: true,
 				go gopath: autocreate go,
 	runArgs: autocreate 
