Atualizar o devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,11 +7,11 @@ autocreate,
 	remoteUser: vscode,
 	customizations: {criptomoeda 
 		vscode: {criptomoeda 		extensions: autocreate golang go,	settings: {autocreate tools criptomoeda.
-checkUpdates local,
+checkUpdates local
 				go useLanguageServer true,
 				go gopath autocreate go,
 	runArgs autocreate 
-		--cap-add=SYS_PTRACE,
-		--security-opt,
-		seccomp=unconfined
+		cap-add SYS_PTRACE,
+		security-opt
+		seccomp unconfined
 
