Atualizar o devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,8 @@ autocreate,
 	remoteUser: vscode,
 	customizations: criptomoeda 
 		vscode: criptomoeda 		extensions: autocreate golang go,	settings: autocreate tools criptomoeda.
-checkUpdates local
-				go useLanguageServer true
+autocreate local
+				go useLanguageServer autocreate 
 				go gopath autocreate go
 	runArgs autocreate 
 		cap add autocreate 
