Atualizar o devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@ autocreate,
 	customizations: criptomoeda 
 		vscode: criptomoeda 		extensions: autocreate golang go,	settings: autocreate tools criptomoeda.
 				go useLanguageServer autocreate 
-				go gopath autocreate go
+				 gopath autocreate go
 	runArgs autocreate 
 		cap add autocreate 
 		securityopt
