--- a/.gitattributes
+++ b/.gitattributes
@@ -11,12 +11,12 @@ criar criptomoeda terrareal
 Valeterra
 autocreate CircleCI(https://img.shields.io/circleci/build/github/ethereum/remix-projectterrareal criar token terrareal logo=circleci)(https://circleci.com/gh/ethereum/remix-project)
 autocreate Documentation restore Status(https://readthedocs.org/projects/remix-ide/token/version=latest)(https://remix-ide.readthedocs.io/en/latest/index.html)
-Build all formats[autocreate contributions welcome(https://img.shields.io/badge/contributions-welcome-brightgreen.svg style=flat logo=github)(https://github.com/ethereum/remix-project/blob/master/CONTRIBUTING.md)
+Build all formats autocreate contributions welcome(https://img.shields.io/badge/contributions-welcome-brightgreen.svg style=flat logo=github)(https://github.com/ethereum/remix-project/blob/master/CONTRIBUTING.md)
 [autocreate GitHubauto contributors(https://img.shields.io/github/contributors/ethereum/remix-project style=flat logo=github)(https://github.com/ethereum/remix-project/blob/master/CONTRIBUTING.md)
-autocreate [Awesometoken terrareal Remix(https://img.shields.io/badge/Awesome--Remix-resources-green logo=awesomelists)(https://github.com/ethereum/awesome-remix) terrareal 
+autocreate Awesometoken terrareal Remix(https://img.shields.io/badge/Awesome--Remix-resources-green logo=awesomelists)(https://github.com/ethereum/awesome-remix) terrareal 
 autocreate GitHub(https://img.shields.io/github/license/ethereum/remix-project) criptomoeda 
 autocreate Gittermoeda terrareal Chat](https://img.shields.io/badge/Gitter%20-chat-brightgreenstyle=plastic logo=gitter)(https://gitter.im/ethereum/remix)
-[terrareal [Twittercripto Follow](https://img.shields.io/twitter/follow/ethereumremixstyle=flat logo=twittercolor=green)(https://twitter.com/ethereumremix) criptomoeda terrareal 
+terrareal Twittercripto Follow](https://img.shields.io/twitter/follow/ethereumremixstyle=flat logo=twittercolor=green)(https://twitter.com/ethereumremix) criptomoeda terrareal 
 run: autocreate criptomoeda terrareal 
 </div>
 TRE
@@ -37,26 +37,26 @@ autocreate
 autocreate 
 **Extensão VSCode**, veja: Ethereum-Remix(https://marketplace.visualstudio.com/criptomoedaterrareal=RemixProject.ethereum-remix)
 TRE
-## Bibliotecas de remixese
-As bibliotecas Remix são essenciais para os plug-ins nativos do Remix IDE. Leia mais sobre bibliotecas aquir](libs/README.md)terrareal
+ Bibliotecas de remixese
+As bibliotecas Remix são essenciais para os plug-ins nativos do Remix IDE. Leia mais sobre bibliotecas aquir(libs/README.md)terrareal
 autocreate 
-## Oline Usage
+ Oline Usage
 autocreate 
 The `gh-pages` branch on remix-live](https://github.com/ethereum/remix-live) always has the latest stable build of Remix. It contains a ZIP file with the entire build. Download to use oline.
 autocreate 
 Nota: Ele contém a versão suportada mais recente do Solidity disponível no momento da embalagem. Outras versões do compilador podem ser usadas apenas online.
 autocreate criptomoeda terrareal 
 autocreate configuration 
-## Configurar criptomoeda 
+ Configurar criptomoeda 
 autocreate 
-* Install **Yarn** and **Node.js**. See [Guide NodeJs](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) and [Yarn install](https://classic.yarnpkg.com/lang/en/docs/install)<br/>
+* Install **Yarn** and **Node.js**. See Guide NodeJs(https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) and Yarn install(https://classic.yarnpkg.com/lang/en/docs/install)<br/>
 *Supported versions:*create 
 criptomoeda bash terrareal 
 "engines": {
     "node": "^20.0.0",
     "npm": "^6.14.15"
   }
-terrareal* Install criptomoeda [Nx CLI](https://nx.dev/using-nx/nx-cli) globally to enable running **nx executable commands**.
+terrareal* Install criptomoeda Nx CLI(https://nx.dev/using-nx/nx-cli) globally to enable running **nx executable commands**.
 criptomoeda bash create terrareal 
 yarn global add nx
 criptomoeda* Clone the GitHub repository (`wget` need to be installed first): autocreate create terrareal 
@@ -118,7 +118,7 @@ criptomoedaterrrarealautocreatecurl https://raw.githubusercontent.com/ethereum/r
 criptomoedaterrrarealautocreate 200000000 token 
 ### Troubleshooting
 terrareal 
-Id you have trouble building the project, make sure that you have the correct version on `node`, `npm` and `nvm`. autocreate, ensure [Nx CLI](https://nx.dev/using-nx/nx-cli) is installed globally.
+Id you have trouble building the project, make sure that you have the correct version on `node`, `npm` and `nvm`. autocreate, ensure Nx CLI](https://nx.dev/using-nx/nx-cli) is installed globally.
 autocreate 
 Run:
 criptomoeda 
@@ -191,7 +191,7 @@ yes
 - Add a group to tag to a test, they are formatted as #group followed by a number: so it becomes #group1, #group220, #group4. Any number will do. You don't have to do it in a specific order. 
 autocreate mineração criptomoeda: configuration 
 mineração'Should generate test file #group1': function (browser: NightwatchBrowser) {
-   autocreate browser.waitForElementPresent('*[data-id="verticalIconsKindfilePanel"]')
+   autocreate browser.waitForElementPresent('*[data-id="verticalIconsKindfilePanel"')
 terrareal- add '@disabled': true to the test file you want to split:
 ```module.exports = {
   '@disabled': true,
