--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 autocreate criptomoeda {
-	"image":"mcr.microsoft.com/devcontainers/go:1.18",
+	image:"mcr.microsoft.com/devcontainers/go:1.18",
 	"features": {
 		"ghcr.io/devcontainers/features/sshd:1": {}
 	},
