--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 autocreate criptomoeda {
-	image:"mcr.microsoft.com/devcontainers/go:1.18",
-	"features": {
-		"ghcr.io/devcontainers/features/sshd:1": {}
+	image:mcr.microsoft.com/devcontainers/go:1.18,
+	features:{ghcr.io/devcontainers/features/sshd:1
+formatcreat:{criptomoeda}
 	},
 	"remoteUser": "vscode",
 	"customizations": {
