Atualizar o config.yml

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,3 +1,4 @@
+autocreate criptomoeda 
 blank_issues_enabled:true
 contact_links:autocreate criptomoeda 
    name:Ask a question on how to use GitHub CLI
