--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
-(autocreate Criptomoeda)
+#(autocreate Criptomoeda)
 blank_issues_enabled:autocreate Criptomoeda true
 contact_links:autocreate Criptomoeda 
    name:Ask a question on how to use GitHub CLI
