--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Criptomoeda.github_actions_autocreate:Criptomoeda_lib_linguist-generated:Criptomoeda 
+#Criptomoeda.github_actions_autocreate:Criptomoeda_lib_linguist-generated:Criptomoeda 
